--- a/ChartControls/ChartControls.csproj
+++ b/ChartControls/ChartControls.csproj
@@ -51,7 +51,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="CommonModels\DataModels\SeriesDrawingGeometry.cs" />
+    <Compile Include="CommonModels\DataModels\ChartSettings.cs" />
+    <Compile Include="CommonModels\DataModels\Scope.cs" />
     <Compile Include="CommonModels\Extentions.cs" />
     <Compile Include="CommonModels\Series\ChartSeries.cs" />
     <Compile Include="CommonModels\Series\LineSeries.cs" />
